[package]
name = "gen_bazel_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
futures = "0.3.21"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.8"
itertools = "0.10.3"